Changelog
=========

HEAD
----

- Compatibility changes to support Zope 2.10. [malthe]

five.pt 0.1 (released 11/19/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Initial release.

- Simplified template class inheritance. [malthe]

- Added ``path`` and ``exists`` functions to skin template
  namespace. [malthe]

- Added call-support for old-style classes in path
  expressions. [malthe]

- Added monkey-patches to replace template engine for module-level
  view page template instances. [malthe]

- Made `EContext` class more robust. [malthe]

- Register custom file-system page template class for use with CMF
  form controllers. [malthe]

- Register custom file-system page template class for use with CMF
  directory views. [malthe]

- Added meta-directives to register browser views, viewlets and
  viewlet managers using Chameleon templates. [malthe]

- Updated to latest API. [malthe]

- Package structure. [hannosch]