@@ -5,15 +5,13 @@ The five.pt package brings the Chameleon template engine to Zope
 2. It's a drop-in replacement, providing bridges to the most common
 API.
 
-Support for CMF skin templates, browser pages, viewlets and viewlet
-managers is included.
+Support for browser pages, viewlets and viewlet managers is included.
 
 Usage
 -----
 
 To enable Chameleon, simply include the ZCML configuration::
 
-  <include package="five.pt" file="meta.zcml" />
   <include package="five.pt" />
 
 Tempates may be instantiated directly. Here's an example of a browser
