@@ -1,10 +1,7 @@
 <configure xmlns="http://namespaces.zope.org/zope">
 
   <include package="five.pt" file="meta.zcml" />
-
-  <include package="five.pt.cmf" />
   <include package="five.pt.patches" />
-  
   <include package="z3c.pt" />
 
   <utility
